# feedback-grape

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  GRU_test.ipynb  README.md  dissipative_tutorial.ipynb  example_A.ipynb  example_B.ipynb  example_b_test.py  feedback_test.ipynb  flax_playground.ipynb  main.py  main2.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_gpu.txt  setup.cfg  setup.py  tox.ini  try.py  ult.fidelity_each_timestep), axis=1)  vectorized_test.py
.github/workflows/: publish_to_pypi.yml  publish_to_test.yml  slow_tests.yml  tests.yml
bugs/NaN_for_indefinite_povm/: bug.ipynb  bug_helpers.py
docs/: requirements.txt
docs/source/: api.rst  conf.py  fgrape.rst  grape.rst  index.rst  qubit_cavity.rst  utils.rst
docs/source/tutorials/: cat_state_adam_tutorial.ipynb  cat_state_l_bfgs_tutorial.ipynb  density_matrix_tutorial.ipynb  dissipative_tutorial.ipynb  hadamard_example_tutorial.ipynb  index.rst  time_dep_tutorial.ipynb  time_indep_tutorial.ipynb
feedback_grape/: cat_state_l_bfgs_new_eg.ipynb  density_matrix_tutorial.ipynb  fgrape.py  fgrape2.py  fgrape_helpers.py  fgrape_parameterized.py  grape.py  grape_paramaterized.py  grape_test.ipynb  grape_test_cat_state_adam.ipynb  grape_test_cat_state_l_bfgs.ipynb  grape_test_dissipative.ipynb  grape_test_time_dep.ipynb  grape_test_time_indep.ipynb  modeling.py  solver.py  speed_vs_memory2.ipynb  svm.py
feedback_grape/local_test_svm/: speed_vs_memory2.ipynb  svm.py
feedback_grape/new_api/: cat_state_l_bfgs_new_eg.ipynb  modeling.py
feedback_grape/utils/: fgrape_helpers.py  fidelity.py  gates.py  operators.py  optimizers.py  povm.py  povm_new.py  purity.py  solver.py  states.py  superoperator.py  tensor.py
feedback_paper_examples/: example_A.ipynb  example_B copy.ipynb  example_B.ipynb  example_C.ipynb  example_D.ipynb  example_E_lut_e2.ipynb  example_E_rnn.ipynb  example_E_rnn_e100.ipynb  example_E_rnn_e2.ipynb
src/GRAPE/: main.py
src/grape/: main.py
tests/: helper_for_tests.py  test_GRAPE.py  test_fgrape.py  test_gates.py  test_grape.py  test_grape1.py  test_grape_parametrized.py  test_modeling.py  test_operators.py  test_states.py  test_superoperators.py  test_tensor.py  tests.py
(+23 files in other folders)
