[build-system]
# in requires you mention the dependencies that your code needs, we would add jax later on for example
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_incomplete_defs = true
warn_no_return = true
warn_redundant_casts = true
show_error_code_links = true
pretty = true
disallow_any_generics = true

[tool.pytest.ini_options]

testpaths = [
    "tests",
]