[metadata]
name = feedback-GRAPE
description = A package for GRAPE with feedback
author = Yousef Elbrolosy
author_email = yousef.elbrolosy@mpl.mpg.de
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering

[options]
packages = grape
install_requires =
    numpy
    scipy
    matplotlib
    jax
python_requires = >=3.9
package_dir =
    =src

[options.extras_require]
testing = 
    pytest
    mypy
    ruff


[options.package_data]
grape = py.typed