[metadata]
name = feedbackGRAPE
version = 0.0.0b8
description = A package for GRAPE with feedback
author = Yousef Elbrolosy
author_email = yousef.elbrolosy@mpl.mpg.de
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering

[options]
install_requires =
    numpy==2.2.4
    scipy==1.15.2
    matplotlib==3.10.1
    jax==0.5.3
    optax==0.2.4
python_requires = >=3.11
; package_dir =
;     =src

[options.extras_require]
testing = 
    pytest
    mypy
    ruff


[options.package_data]
feedback_grape = py.typed
